step 1 and 2 completed

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-    <p>Hello World, we are software developers!</p>
     <script  src="js/index.js"></script>
+    <header id="header">
+      <img src="img/logo.png" alt="">
+    </header><!-- /header -->
   </body>
 </html>
