--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <script  src="js/index.js"></script>
     <header id="header">
-      <img src="img/logo.png" alt="">
+      <img src="img/logo.png" alt="logo">
+      <nav id="nav-bar">
+        <ul>
+          <li><a href="#" class="nav-link">Inicio</a></li>
+          <li><a href="#" class="nav-link">Sobre nosotros</a></li>
+          <li><a href="#" class="nav-link">Contacto</a></li>
+      </nav>
     </header><!-- /header -->
   </body>
 </html>
