update point 5 and 6

--- a/index.html
+++ b/index.html
@@ -10,7 +10,22 @@
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <script  src="js/index.js"></script>
     <header id="header">
-      <img src="img/logo.png" alt="">
+      <img src="img/logo.png" alt="logo">
+      <nav id="nav-bar">
+        <ul>
+          <li><a href="#" class="nav-link" href="#home">Home</a></li>
+          <li><a href="#" class="nav-link" href="aboutus">About us</a></li>
+          <li><a href="#" class="nav-link" href="contact">Contact us</a></li>
+      </nav>
     </header><!-- /header -->
+    <section id="home">
+      <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/tXMYlY-hDOo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </section>
+    <section id="aboutus">
+      
+    </section>
+    <section id="contact">
+      
+    </section>
   </body>
 </html>
