--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
     </header><!-- /header -->
     <section id="home">
       <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/tXMYlY-hDOo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      
+      <form id="form">
+        <label>E-mail:&nbsp;</label>
+        <input type="email" name="e-mail" id="email">
+      </form>
+
     </section>
     <section id="aboutus">
       
