--- a/index.html
+++ b/index.html
@@ -31,5 +31,64 @@
         <input type="submit" name="submit" id="submit">
       </form>
     </section>
+    <div class="headerFull">
+      
+    </div>
+    <div class="container">
+      <header id="header">
+        <div class="logo">
+          <img src="img/logo.png" alt="logo" id="header-img">
+        </div>
+        <nav id="nav-bar" class="navbar">
+          <ul>
+            <li><a href="#home" class="nav-link" href="#home">Home</a></li>
+            <li><a href="#aboutus" class="nav-link" href="#home">About us</a></li>
+            <li><a href="#contact" class="nav-link" href="#home">Contact us</a></li>
+          </ul>
+        </nav>
+      </header><!-- /header -->
+      <section id="home">
+        <div class="videoContainer">
+        <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/tXMYlY-hDOo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+      </section>
+      <section id="aboutus">
+        <div id="whatwedo">
+          <div class="plans layer1">
+            <h3>Normal plan</h3>
+            <p>$559</p>
+            <ol>
+                <li>basic movement</li>
+                <li>basic colors (red & blue)</li>
+            </ol>
+          </div>
+          <div class="plans layer1">
+            <h3>Ultra plan</h3>
+            <p>$699</p>
+            <ol>
+                <li>improved movement</li>
+                <li>arcoiris colors</li>
+                <li>shining unicorns</li>
+            </ol>
+          </div>
+          <div class="plans layer1">
+            <h3>Plus ultra plan</h3>
+            <p>$779</p>
+            <ol>
+                <li>you can taste them in your dreams</li>
+                <li>you get powers</li>
+                <li>PLUS ULTRA!!</li>
+            </ol>
+          </div>
+        </div>
+      </section>
+      <section id="contact">
+        <form id="form" action="https://www.freecodecamp.com/email-submit" method="POST">
+          <label>E-mail:</label>
+          <input type="email" placeholder="something@gmail.com" name="e-mail" id="email">
+          <input type="submit" name="submit" id="submit">
+        </form>
+      </section>
+    </div>
   </body>
 </html>
