email form fixed

--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
         </div>
       </section>
       <section id="contact">
-        <form id="form" action="https://www.freecodecamp.com/email-submit" method="POST">
+        <form id="form" action="https://www.freecodecamp.com/email-submit" method="post">
           <label>E-mail:</label>
-          <input type="email" placeholder="something@gmail.com" name="e-mail" id="email">
+          <input type="email" placeholder="something@gmail.com" name="email" id="email">
           <input type="submit" name="submit" id="submit">
         </form>
       </section>
