--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         </div>
         <nav id="nav-bar" class="navbar">
           <ul>
-            <li><a href="#contact" class="nav-link" href="#home">Contact us</a></li>
-            <li><a href="#aboutus" class="nav-link" href="#home">About us</a></li>
+            <li><a href="#contact" class="nav-link" href="#contact">Contact us</a></li>
+            <li><a href="#aboutus" class="nav-link" href="#aboutus">About us</a></li>
             <li><a href="#home" class="nav-link" href="#home">Home</a></li>
           </ul>
         </nav>
