--- a/index.html
+++ b/index.html
@@ -61,9 +61,12 @@
         </div>
       </section>
       <section id="contact">
-        <form id="form" action="https://www.freecodecamp.com/email-submit" method="post">
-          <label>E-mail:</label>
-          <input type="email" placeholder="something@gmail.com" name="email" id="email">
+        <form id="form" action="https://www.freecodecamp.com/email-submit" method="post" class="layer1">
+          <p>Contact us!</p>
+          <input type="text" placeholder="Name" name="name" id="name">
+          <input type="text" placeholder="Last name" name="lastname" id="lastname">
+          <input type="email" placeholder="Email" name="email" id="email">
+          <input placeholder="Subject" type="text">
           <input type="submit" name="submit" id="submit">
         </form>
       </section>
